// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar with access stats 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <SidebarAccessStats
    file={
      {
        "description": "bar",
        "id": "foo",
      }
    }
  />
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar with all components 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <div
    className="bcs-DetailsSidebar-notices"
  >
    <SidebarNotices
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
    />
  </div>
  <SidebarClassification
    classification={
      {
        "definition": "message",
        "name": "name",
      }
    }
    file={
      {
        "description": "bar",
        "id": "foo",
      }
    }
    onEdit={[Function]}
  />
  <SidebarAccessStats
    file={
      {
        "description": "bar",
        "id": "foo",
      }
    }
  />
  <SidebarSection
    className=""
    interactionTarget="fileproperties"
    isOpen={true}
    title={
      <FormattedMessage
        defaultMessage="File Properties"
        id="be.sidebarProperties"
      />
    }
  >
    <SidebarVersions
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
    />
    <SidebarFileProperties
      archivedAt="2012-12-12T11:04:26-08:00"
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
      hasRetentionPolicy={true}
      isLoading={false}
      onDescriptionChange={[Function]}
    />
  </SidebarSection>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar with archived date when feature details.archivedAt is enabled 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <SidebarSection
    className=""
    interactionTarget="fileproperties"
    isOpen={true}
    title={
      <FormattedMessage
        defaultMessage="File Properties"
        id="be.sidebarProperties"
      />
    }
  >
    <SidebarFileProperties
      archivedAt="2012-12-12T11:04:26-08:00"
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
      hasRetentionPolicy={false}
      isLoading={false}
      onDescriptionChange={[Function]}
    />
  </SidebarSection>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar with notices 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <div
    className="bcs-DetailsSidebar-notices"
  >
    <SidebarNotices
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
    />
  </div>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar with properties 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <SidebarSection
    className=""
    interactionTarget="fileproperties"
    isOpen={true}
    title={
      <FormattedMessage
        defaultMessage="File Properties"
        id="be.sidebarProperties"
      />
    }
  >
    <SidebarFileProperties
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
      hasRetentionPolicy={false}
      isLoading={false}
      onDescriptionChange={[Function]}
    />
  </SidebarSection>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar with versions 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
/>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar without archived date when feature details.archivedAt is disabled 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <SidebarSection
    className=""
    interactionTarget="fileproperties"
    isOpen={true}
    title={
      <FormattedMessage
        defaultMessage="File Properties"
        id="be.sidebarProperties"
      />
    }
  >
    <SidebarFileProperties
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
      hasRetentionPolicy={false}
      isLoading={false}
      onDescriptionChange={[Function]}
    />
  </SidebarSection>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar without archived date when feature details.archivedAt is enabled and date is not set 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <SidebarSection
    className=""
    interactionTarget="fileproperties"
    isOpen={true}
    title={
      <FormattedMessage
        defaultMessage="File Properties"
        id="be.sidebarProperties"
      />
    }
  >
    <SidebarFileProperties
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
      hasRetentionPolicy={false}
      isLoading={false}
      onDescriptionChange={[Function]}
    />
  </SidebarSection>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render DetailsSidebar without archived date when feature details.archivedAt is undefined 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
>
  <SidebarSection
    className=""
    interactionTarget="fileproperties"
    isOpen={true}
    title={
      <FormattedMessage
        defaultMessage="File Properties"
        id="be.sidebarProperties"
      />
    }
  >
    <SidebarFileProperties
      file={
        {
          "description": "bar",
          "id": "foo",
        }
      }
      hasRetentionPolicy={false}
      isLoading={false}
      onDescriptionChange={[Function]}
    />
  </SidebarSection>
</SidebarContent>
`;

exports[`elements/content-sidebar/DetailsSidebar render() should render an empty container if there is no file information 1`] = `
<SidebarContent
  className="bcs-details"
  elementId=""
  sidebarView="details"
  title={
    <FormattedMessage
      defaultMessage="Details"
      id="be.sidebarDetailsTitle"
    />
  }
/>
`;
